# threedverse

./: .gitignore  LICENSE  README.MD  pyproject.toml
threedverse-django/: manage.py
threedverse-django/core/: models.py
threedverse-django/object_storage/: admin.py  models.py  serializers.py  urls.py  views.py
threedverse-django/object_storage/migrations/: 0001_initial.py  0002_auto_20200614_1606.py
threedverse-django/threedverse/: asgi.py  settings.py  urls.py  wsgi.py
threedverse-django/users/migrations/: 0001_initial.py
threedverse-frontend/: README.md  package.json  quasar.conf.js
threedverse-frontend/src/boot/: axios.js
threedverse-frontend/src/components/: EssentialLink.vue  ProjectPane.vue  RoundAvatar.vue
threedverse-frontend/src/css/: quasar.variables.sass
threedverse-frontend/src/layouts/: MainLayout.vue
threedverse-frontend/src/pages/: Project.vue  ProjectList.vue  Upload.vue
threedverse-frontend/src/router/: routes.ts
