[tool.poetry]
name = "3dverse"
version = "0.1.0"
description = "Self hosted application to organize your 3d creations and to import other creations for offline and fast access"
authors = ["Marcin Gordziejewski <marcin.gord@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"
djangorestframework = "^3.11.0"
Pillow = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
